third_party/WebKit/WebCore/bridge/runtime_array.cpp
@@ -29,6 +29,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include <runtime/ArrayPrototype.h>
 #include <runtime/Error.h>
+#include <runtime/PropertyNameArray.h>
 #include "JSDOMBinding.h"
 
 using namespace WebCore;
@@ -144,6 +145,15 @@ bool RuntimeArray::deleteProperty(ExecState*, const Identifier&)
 bool RuntimeArray::deleteProperty(ExecState*, unsigned)
 {
     return false;
+}
+
+void RuntimeArray::getPropertyNames(ExecState* exec, PropertyNameArray& propertyNames)
+{
+    const unsigned int length = getLength();
+    for (unsigned i = 0; i < length; ++i)
+        propertyNames.add(Identifier::from(exec, i));
+
+    JSObject::getPropertyNames(exec, propertyNames);
 }
 
 }
